feat(inventory): export and export profile endpoints
